# fastapi-streamlit-llm-starter

./: .env.cache.examples  .env.cache.simple.template  .env.cache.template  .env.example  .env.examples-cache  .flake8  .gitignore  .repomixignore  .taskmasterconfig  .windsurfrules  AGENTS.md  AGENTS.template-users.md  CLAUDE.md  FINAL_VALIDATION_SUMMARY.md  INTEGRATION_GUIDE.md  Makefile  PERFORMANCE_VALIDATION_REPORT.md  PHASE2_DELIVERABLE3_SUMMARY.md  PHASE_1_SUMMARY.md  README.md  TESTING.md  branch-dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.secure.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  repomix.config.json  run_tests.py  test_callback_integration.py  test_integration.py  test_phase3_integration.py
.claude/: .gitignore  (+2 more)
backend/: AGENTS.md  Dockerfile  EXCEPTION_CONSOLIDATION_SUMMARY.md  Makefile.redis  README.md  env.example  pyproject.toml  pyproject.toml.backup  pytest.ini  requirements-dev-only.txt  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.docker.txt  requirements.txt  test_api.py  test_auth.py
backend/app/: IMPORTS.md  auth.py  config.py  dependencies.py  dependencies_refactored.py  main.py  main_refactored.py  migration_utils.py  performance_benchmarks.py  refactor.py  resilience_endpoints.py  resilience_endpoints__simplified.py.bak  resilience_presets.py  validation_schemas.py
backend/app/api/: README.md  __init__.py
backend/app/core/: README.md  __init__.py  config.py  environment.py  exceptions.py  middleware.py
backend/app/examples/: README.md
backend/app/infrastructure/: __init__.py
backend/app/routers/: __init__.py  monitoring.py  resilience.py
backend/app/schemas/: __init__.py  common.py  health.py  text_processing.py
backend/app/security/: __init__.py  response_validator.py
backend/app/services/: __init__.py  cache.py  monitoring.py  prompt_builder.py  resilience.py  response_validator.py  text_processor.py
backend/app/services2/: __init__.py  text_processor.py
backend/app/utils/: prompt_utils.py  sanitization.py
backend/backend/: TASK2_IMPLEMENTATION_SUMMARY.md
backend/config/security/: dev.yaml  prod.yaml  scanners.yaml  test.yaml
backend/contracts/: README.md  dependencies.pyi  main.pyi  repomix-instructions.md
backend/contracts/api/: __init__.pyi
backend/contracts/core/: __init__.pyi  config.pyi  environment.pyi  exceptions.pyi
backend/contracts/infrastructure/: __init__.pyi
backend/contracts/schemas/: __init__.pyi  common.pyi  health.pyi  text_processing.pyi
backend/contracts/services/: __init__.pyi  response_validator.pyi  text_processor.pyi
backend/examples/: README.md  advanced_infrastructure_demo.py  cache_configuration_examples.py
backend/examples/cache/: callback_composition_examples.py  comprehensive_usage_examples.py  migration_code_examples.py  phase3_fastapi_integration.py  preset_scenarios_ai_application.py  preset_scenarios_production_highperf.py  preset_scenarios_simple_webapp.py
backend/scripts/: clean_redis_test_env.sh  import_update_script.py  migrate-resilience-config.py  migrate_cache_config.py  run_cache_benchmarks.py  structure_validation.py  test.sh  validate_cache_config.py
backend/scripts/old/: debug_middleware_stack.py  validate_environment_configurations.py  validate_environment_configurations_corrected.py  validate_middleware_stack.py
backend/tests/: FIX_TESTS.md  README.md  assertions.py  conftest.py  directory-structure.txt  mocks.py  run_and_group_tests.sh  test_cache.py  test_dependencies.py  test_dependency_injection.py  test_main.py  test_manual_api.py  test_manual_auth.py  test_phase3_exception_suite.py  test_process_endpoint_auth.py  test_resilience.py  test_sanitization.py  test_text_processor.py
backend/tests.old/: README.md  failures-skips.txt  fixtures.py
backend/tests.old/integration/: test_cache_integration.py  test_resilience_integration2.py
backend/tests.old/performance/: test_cache_performance.py
backend/tests.old/templates/: code-review_api.md  code-review_core.md  code-review_performance.md  code-review_services.md
backend/tests/api/: conftest.py
backend/tests/core/: test_comprehensive_exceptions.py  test_config.py  test_config_monitoring.py  test_dependencies.py  test_dependency_injection.py  test_exceptions.py  test_middleware.py
backend/tests/e2e/: __init__.py  test_backward_compatibility.py
backend/tests/infrastructure/: conftest.py
backend/tests/integration/: CURRENT_STATUS.md  README.md  __init__.py  conftest.py  seams_manifest.yaml  seams_query.py  seams_schema.json  seams_todo.md  test_auth_endpoints.py  test_comprehensive_backward_compatibility.py  test_config_monitoring_endpoints.py  test_end_to_end.py  test_exception_flows.py  test_exception_monitoring.py  test_fixture_order.py  test_main_endpoints.py  test_performance_benchmark_endpoints.py  test_preset_resilience_integration.py  test_request_isolation.py  test_resilience_endpoints.py  test_resilience_integration1.py  test_resilience_integration2.py  test_security_validation_endpoints.py
backend/tests/manual/: test_manual_api.py  test_manual_auth.py
backend/tests/performance/: test_cache_performance.py  test_exception_performance.py  test_health_check_performance.py  test_middleware_performance.py
backend/tests/security/: __init__.py  test_context_isolation.py
backend/tests/services/: __init__.py  test_cache.py  test_monitoring.py  test_text_processing.py
backend/tests/shared_schemas/: test_common_schemas.py  (+1 more)
frontend/: AGENTS.md  Dockerfile  README.md  config.py  pyproject.toml  pyproject.toml.backup  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.docker.txt  requirements.txt  run_app.py
frontend/app/: __init__.py  app.py  config.py
frontend/tests/: __init__.py  conftest.py  test_api_client.py  test_config.py
shared/: README.md  README_poetry.md  __init__.py  models.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt
shared/shared/: README.md  __init__.py  examples.py  models.py  sample_data.py  text_processing.py
(+2342 files in other folders)
