[tool.poetry]
name = "my_project_shared_lib"
version = "0.1.0"
description = "Shared Python code for the project, including models and utilities."
authors = ["Project Team"]
readme = "README_poetry.md"
packages = [{include = "shared"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "^0.13.0"
mypy = "^1.18.0"

# Use Poetry run for development scripts
# poetry run pytest (test)
# poetry run ruff check . (lint)
# poetry run ruff format . (format)
# poetry run mypy shared/ (type-check)
# poetry build (build package)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"